🐛 Fix viewport size on mobile devices part 4

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -34,7 +34,7 @@ ol[role="list"] {
 
 /* Set core body defaults */
 body {
-  min-height: 100svh;
+  min-height: 100dvh;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
